--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -21,9 +21,9 @@ jobs:
             for_test: 1.7.7
 
         ps_version_to:
-          - version: 1.7.7
+          - for_test: 1.7.7
             filename: 1.7.7.x-prestashop-1.7.7.2.zip
-          - version: 1.7.8
+          - for_test: 1.7.8
             filename: develop-prestashop-1.7.8.0.zip
 
       fail-fast: false
@@ -36,5 +36,27 @@ jobs:
         with:
           url: ${{ env.nightly-storage }}/${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }}
           target: nightly-build/
-      - name: Check file
-        run : ls nightly-build/
+      - name: Build PrestaShop ${{ matrix.ps_version_from.to_download }} on docker
+        env:
+          VERSION: ${{ matrix.ps_version_from.to_download }}
+        shell: bash
+        run : |
+          docker-compose up -d
+          bash -c 'while [[ "$(curl -L -s -o /dev/null -w %{http_code} http://localhost:8001/index.php)" != "200" ]]; do sleep 5; done'
+
+      # Run tests
+      - uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 10
+      - name: Install dependencies
+        run: npm install
+      - name: Run tests
+        env:
+          URL_FO: "http://localhost:8081/"
+          PS_VERSION: ${{ matrix.ps_version_from.for_test }}
+          PS_VERSION_UPGRADE_TO: ${{ matrix.ps_version_to.for_test }}
+          DOWNLOAD_PATH: nightly-build
+          ZIP_NAME: ${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }}
+        run: npm run test
