--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -41,7 +41,7 @@ jobs:
           VERSION: ${{ matrix.ps_version_from.to_download }}
         shell: bash
         run : |
-          docker-compose up -d
+          docker-compose -f docker-compose.yml up -d
           bash -c 'while [[ "$(curl -L -s -o /dev/null -w %{http_code} http://localhost:8001/index.php)" != "200" ]]; do sleep 5; done'
 
       # Run tests
