--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,8 +1,7 @@
 FROM prestashop/base:7.1-apache
 LABEL maintainer="PrestaShop Core Team <coreteam@prestashop.com>"
 
-ARG VERSION
-ENV PS_VERSION $VERSION
+ENV PS_VERSION $PS_VERSION
 
 # Get PrestaShop
 ADD https://www.prestashop.com/download/old/prestashop_${PS_VERSION}.zip /tmp/prestashop.zip
