--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -43,7 +43,7 @@ jobs:
         shell: bash
         run : |
           docker-compose -f docker-compose.yml up -d
-          bash -c 'while [[ "$(curl -L -s -o /dev/null -w %{http_code} http://localhost:8001/index.php)" != "200" ]]; do sleep 5; done'
+          bash -c 'while [[ "$(curl -L -s -o /dev/null -w %{http_code} http://localhost:8001/en )" != "200" ]]; do sleep 5; done'
 
       # Run tests
       - name: Setup Node
