--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -41,9 +41,11 @@ jobs:
         env:
           PS_VERSION: ${{ matrix.ps_version_from.to_download }}
         shell: bash
-        run : |
-          docker-compose -f docker-compose.yml up -d
-          bash -c 'while [[ "$(curl -L -s -o /dev/null -w %{http_code} http://localhost:8001/en )" != "200" ]]; do sleep 5; done'
+        run : docker-compose -f docker-compose.yml up -d
+      - name: Wait for prestashop to be ready
+        uses: juliangruber/sleep-action@v1
+        with:
+          time: 60s
 
       # Run tests
       - name: Setup Node
