--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -7,8 +7,8 @@ ARG PS_VERSION
 ADD https://www.prestashop.com/download/old/prestashop_${PS_VERSION}.zip /tmp/prestashop.zip
 
 # Extract
-RUN mkdir -p /var/www/html \
-	&& unzip -q /tmp/prestashop.zip -d /var/www/html/ \
-	&& bash /tmp/ps-extractor.sh /var/www/html \
+RUN mkdir -p /tmp/data-ps \
+	&& unzip -q /tmp/prestashop.zip -d /tmp/data-ps/ \
+	&& bash /tmp/ps-extractor.sh /tmp/data-ps \
 	&& chmod 777 -R /var/www/html \
 	&& rm /tmp/prestashop.zip
