--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -63,6 +63,7 @@ jobs:
           ZIP_NAME: ${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }}
         run: npm run test
       - uses: actions/upload-artifact@v2
+        if: ${{ always() }}
         with:
           name: my-artifact
           path: ./screen.png
