--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -41,7 +41,9 @@ jobs:
         env:
           PS_VERSION: ${{ matrix.ps_version_from.to_download }}
         shell: bash
-        run : docker-compose -f docker-compose.yml up -d
+        run : |
+          mkdir -p /var/www/html && chmod 777 -R /var/www/html
+          docker-compose -f docker-compose.yml up -d
       - name: Wait for prestashop to be ready
         uses: juliangruber/sleep-action@v1
         with:
