--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -42,8 +42,8 @@ jobs:
           PS_VERSION: ${{ matrix.ps_version_from.to_download }}
         shell: bash
         run : |
-          export UID=$(id -u)
-          export GID=$(id -g)
+          export uid=$(id -u)
+          export gid=$(id -g)
           docker-compose -f docker-compose.yml up -d
       - name: Wait for prestashop to be ready
         uses: juliangruber/sleep-action@v1
