--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,20 @@ services:
 
   ps_db:
     image: mysql:5.7
+    network_mode: host
     container_name: ps_db
     env_file: .env
 
   ps_web:
+    network_mode: host
     build:
       context: ./
       dockerfile: .docker/Dockerfile
       args:
         - PS_VERSION=$PS_VERSION
-    user: $uid:$gid
     container_name: ps_web
     env_file: .env
     volumes:
       - /var/www/html:/var/www/html
     ports:
       - 80:80
-
-networks:
-  ps-net:
