--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -41,10 +41,7 @@ jobs:
         env:
           PS_VERSION: ${{ matrix.ps_version_from.to_download }}
         shell: bash
-        run : |
-          export uid=$(id -u)
-          export gid=$(id -g)
-          docker-compose -f docker-compose.yml up -d
+        run : docker-compose -f docker-compose.yml up -d
       - name: Wait for prestashop to be ready
         uses: juliangruber/sleep-action@v1
         with:
