--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -46,6 +46,8 @@ jobs:
         uses: juliangruber/sleep-action@v1
         with:
           time: 60s
+      - name: Give permissions
+        run: chmod 777 -R /var/www/html
 
       # Run tests
       - name: Setup Node
@@ -59,7 +61,7 @@ jobs:
           URL_FO: "http://localhost/"
           PS_VERSION: ${{ matrix.ps_version_from.for_test }}
           PS_VERSION_UPGRADE_TO: ${{ matrix.ps_version_to.for_test }}
-          DOWNLOAD_PATH: nightly-build
+          DOWNLOAD_PATH: "./nightly-build"
           ZIP_NAME: ${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }}
         run: npm run test
       - uses: actions/upload-artifact@v2
