--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     container_name: ps_web
     env_file: .env
     volumes:
-      - /var/www/html:/var/www/html
+      - ./public:/var/www/html
     ports:
       - 80:80
 
