--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -56,9 +56,9 @@ jobs:
       - name: Install autoupgrade module
         run: |
           docker ps
-          docker exec -it ps_web /var/www/html/bin/console --env=prod prestashop:module install autoupgrade
-          docker exec -it ps_web mkdir -p /var/www/html/modules/autoupgrade/download
-          docker exec -it ps_web cp ./nightly-build/* /var/www/html/modules/autoupgrade/download/*
+          docker exec -u www-data ps_web /var/www/html/bin/console --env=prod prestashop:module install autoupgrade
+          docker exec -u www-data ps_web mkdir -p /var/www/html/modules/autoupgrade/download
+          docker exec -u www-data ps_web cp /nightly-build/* /var/www/html/modules/autoupgrade/download/*
 
       # Run tests
       - name: Setup Node
