--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -56,9 +56,11 @@ jobs:
       - name: Install autoupgrade module
         shell: bash
         run: |
+          docker exec -u www-data ps_web  echo "<?php define('_PS_ADMIN_DIR_', 'admin-dev');" >> /var/www/html/config/defines_custom.inc.php
           docker exec -u www-data ps_web /var/www/html/bin/console --env=prod prestashop:module install autoupgrade
           docker exec -u www-data ps_web mkdir -p /var/www/html/modules/autoupgrade/download
-          docker exec -u www-data ps_web cp -R /nightly-build/${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }} \
+          docker exec -u www-data ps_web cp \
+            /nightly-build/${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }} \
             /var/www/html/modules/autoupgrade/download/${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }}
 
       # Run tests
