--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           docker exec -u www-data ps_web ls /var/www/html
           docker exec -u www-data ps_web ls /var/www/html/config
+          docker exec -u www-data ps_web cat /var/www/html/config/defines_custom.inc.php
           docker exec -u www-data ps_web echo "<?php define('_PS_ADMIN_DIR_', 'admin-dev');" > /var/www/html/config/defines_custom.inc.php
           docker exec -u www-data ps_web /var/www/html/bin/console --env=prod prestashop:module install autoupgrade
           docker exec -u www-data ps_web mkdir -p /var/www/html/modules/autoupgrade/download
