--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -15,6 +15,9 @@ RUN mkdir -p /tmp/data-ps \
 	&& bash /tmp/ps-extractor.sh /tmp/data-ps \
 	&& rm /tmp/prestashop.zip
 
+# Create defines_custom.inc.php
+RUN echo "<?php define('_PS_ADMIN_DIR_', 'admin-dev');" > /var/www/html/config/defines_custom.inc.php
+
 # Extract Autoupgrade module
 RUN unzip -q /tmp/autoupgrade.zip -d /var/www/html/modules/ \
 	&& rm /tmp/autoupgrade.zip
