--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -9,6 +9,11 @@ ADD https://www.prestashop.com/download/old/prestashop_${PS_VERSION}.zip /tmp/pr
 # Get Autoupgrade module
 ADD https://api-addons.prestashop.com/?method=module&id_module=5496 /tmp/autoupgrade.zip
 
+# Install php zip
+RUN sudo add-apt-repository universe \
+    && sudo apt update \
+    && sudo apt install php7.1-zip
+
 # Extract PS
 RUN mkdir -p /tmp/data-ps \
 	&& unzip -q /tmp/prestashop.zip -d /tmp/data-ps/ \
@@ -16,7 +21,7 @@ RUN mkdir -p /tmp/data-ps \
 	&& rm /tmp/prestashop.zip
 
 # Create defines_custom.inc.php
-RUN echo "define('_PS_ADMIN_DIR_', 'admin-dev');" >> /var/www/html/config/defines_custom.inc.php
+RUN echo "<?php define('_PS_ADMIN_DIR_', 'admin-dev');" > /var/www/html/config/defines_custom.inc.php
 
 # Extract Autoupgrade module
 RUN unzip -q /tmp/autoupgrade.zip -d /var/www/html/modules/ \
