--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -10,8 +10,9 @@ ADD https://www.prestashop.com/download/old/prestashop_${PS_VERSION}.zip /tmp/pr
 ADD https://api-addons.prestashop.com/?method=module&id_module=5496 /tmp/autoupgrade.zip
 
 # Install php zip
-RUN add-apt-repository ppa:ondrej/php \
+RUN apt-get install software-properties-common \
     && apt-get update -y \
+    && add-apt-repository ppa:ondrej/php \
     && apt-get install -y libzip-dev php7.1-zip \
     && docker-php-ext-configure zip --with-libzip \
     && docker-php-ext-install zip
