Delete debug steps and files

--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -13,14 +13,14 @@ jobs:
     strategy:
       matrix:
         ps_version_from:
-          #- to_download: 1.7.4.4
-           # for_test: 1.7.4
-          #- to_download: 1.7.5.2
-           # for_test: 1.7.5
+          - to_download: 1.7.4.4
+            for_test: 1.7.4
+          - to_download: 1.7.5.2
+            for_test: 1.7.5
           - to_download: 1.7.6.9
             for_test: 1.7.6
-          #- to_download: 1.7.7.1
-           # for_test: 1.7.7
+          - to_download: 1.7.7.1
+            for_test: 1.7.7
 
         ps_version_to:
           - for_test: 1.7.7
@@ -83,9 +83,3 @@ jobs:
           PROJECT_PATH: "./public"
           ZIP_NAME: ${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }}
         run: npm run test
-
-      - uses: actions/upload-artifact@v2
-        if: ${{ always() }}
-        with:
-          name: my-artifact
-          path: ./screen.png
