Test upgrade for 1.7.7

--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -13,20 +13,20 @@ jobs:
     strategy:
       matrix:
         ps_version_from:
-          - to_download: 1.7.4.4
-            for_test: 1.7.4
-          - to_download: 1.7.5.2
-            for_test: 1.7.5
-          - to_download: 1.7.6.9
-            for_test: 1.7.6
+          #- to_download: 1.7.4.4
+           # for_test: 1.7.4
+          #- to_download: 1.7.5.2
+           # for_test: 1.7.5
+          #- to_download: 1.7.6.9
+           # for_test: 1.7.6
           - to_download: 1.7.7.1
             for_test: 1.7.7
 
         ps_version_to:
           - for_test: 1.7.7
             filename: 1.7.7.x-prestashop_1.7.7.2.zip
-          - for_test: 1.7.8
-            filename: develop-prestashop_1.7.8.0.zip
+          #- for_test: 1.7.8
+           # filename: develop-prestashop_1.7.8.0.zip
 
       fail-fast: false
 
