--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -13,20 +13,20 @@ jobs:
     strategy:
       matrix:
         ps_version_from:
-          #- to_download: 1.7.4.4
-           # for_test: 1.7.4
-          #- to_download: 1.7.5.2
-           # for_test: 1.7.5
-          #- to_download: 1.7.6.9
-           # for_test: 1.7.6
+          - to_download: 1.7.4.4
+            for_test: 1.7.4
+          - to_download: 1.7.5.2
+            for_test: 1.7.5
+          - to_download: 1.7.6.9
+            for_test: 1.7.6
           - to_download: 1.7.7.1
-            for_test: 1.7.7
+            for_test: 1.7.7.1
 
         ps_version_to:
-          - for_test: 1.7.7
+          - for_test: 1.7.7.2
             filename: 1.7.7.x-prestashop_1.7.7.2.zip
-          #- for_test: 1.7.8
-           # filename: develop-prestashop_1.7.8.0.zip
+          - for_test: 1.7.8.0
+            filename: develop-prestashop_1.7.8.0.zip
 
       fail-fast: false
 
@@ -80,7 +80,6 @@ jobs:
           PS_VERSION: ${{ matrix.ps_version_from.for_test }}
           PS_VERSION_UPGRADE_TO: ${{ matrix.ps_version_to.for_test }}
           DOWNLOAD_PATH: "./nightly-build"
-          PROJECT_PATH: "./public"
           ZIP_NAME: ${{ env.TODAY_DATE }}-${{ matrix.ps_version_to.filename }}
         run: npm run test
 
