Fix screenshots folder

--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -79,4 +79,4 @@ jobs:
         if: ${{ always() }}
         with:
           name: failed-steps-screenshots
-          path: ./screenshots
+          path: ./screenshots/
