--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.2.0",
     "eslint-config-prestashop": "^0.1.0",
     "mocha": "^8.2.1",
+    "mochawesome": "^2.3.0",
     "module-alias": "^2.2.2",
     "prestashop_test_lib": "0.0.12"
   },
