--- a/.github/workflows/nightly-upgrade.yml
+++ b/.github/workflows/nightly-upgrade.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   upgrade:
+    name: Testing Autoupgrade module on UI
     runs-on: ubuntu-latest
     env:
       nightly-storage: https://storage.googleapis.com/prestashop-core-nightly
@@ -82,11 +83,13 @@ jobs:
       # Upload Mochawesome reports
       - name: Rename Mochawesome report
         if: ${{ always() }}
-        run: cp ./mochawesome-reports/mochawesome.json ./mochawesome-reports/upgrade-from-${{ matrix.ps_version_from }}-to-${{ matrix.ps_version_to.for_test }}
+        run: |
+          mkdir -p ./json-reports
+          cp ./mochawesome-report/mochawesome.json ./json-reports/upgrade-from-${{ matrix.ps_version_from }}-to-${{ matrix.ps_version_to.for_test }}
 
       - uses: actions/upload-artifact@v2
         name: Upload Mochawesome report
         if: ${{ always() }}
         with:
-          name: upgrade-from-${{ matrix.ps_version_from }}-to-${{ matrix.ps_version_to.for_test }}
-          path: ./mochawesome-reports
+          name: tests-reports
+          path: ./json-reports
